3-apps/obsidian-couchdb/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian-livesync
  namespace: obsidian-livesync
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.obsidian.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: obsidian-livesync-svc-couchdb
          port: 5984
    - match: Host(`obsidian.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: obsidian-livesync-svc-couchdb
          port: 5984
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
